# LosTopos

./: CMakeLists.txt  README.md  readme.txt
include/LosTopos/: accelerationgrid.h  broadphase.h  broadphasegrid.h  collisionpipeline.h  dynamicsurface.h  edgecollapser.h  edgeflipper.h  edgesplitter.h  impactzonesolver.h  iomesh.h  meshrenderer.h  meshsmoother.h  meshsnapper.h  nondestructivetrimesh.h  options.h  subdivisionscheme.h  surftrack.h  trianglequality.h
include/LosTopos/common/: array2.h  array2_utils.h  array3.h  array3_utils.h  blas_wrapper.h  ccd_wrapper.h  collisionqueries.h  grid3.h  marching_tiles_hires.h  mat.h  matlapack.h  newparser.h  predicates.h  runstats.h  util.h  vec.h  vector_math.h
include/LosTopos/common/newsparse/: dense_matrix.h  krylov_solvers.h  sparse_matrix.h
include/LosTopos/common/tunicate/: expansion.h  interval.h  intervalbase.h  rootparitycollisiontest.h
src/: accelerationgrid.cpp  broadphasegrid.cpp  collisionpipeline.cpp  dynamicsurface.cpp  edgecollapser.cpp  edgeflipper.cpp  edgesplitter.cpp  facesplitter.cpp  impactzonesolver.cpp  iomesh.cpp  meshcutter.cpp  meshmerger.cpp  meshpincher.cpp  meshrenderer.cpp  meshsmoother.cpp  meshsnapper.cpp  nondestructivetrimesh.cpp  subdivisionscheme.cpp  surftrack.cpp  t1transition.cpp  trianglequality.cpp
src/common/: bfstream.cpp  ccd_wrapper.cpp  collisionqueries.cpp  cubic_ccd_wrapper.cpp  gluvi.cpp  marching_tiles_hires.cpp  predicates.cpp  root_parity_ccd_wrapper.cpp  runstats.cpp  wallclocktime.cpp
src/common/newsparse/: dense_matrix.cpp  krylov_solvers.cpp  sparse_matrix.cpp
src/common/tunicate/: expansion.cpp  intersection.cpp  interval.cpp  neg.cpp  orientation.cpp  rootparitycollisiontest.cpp  sos_intersection.cpp  sos_orientation.cpp
